fix: Corregir CustomTrabajoDetailsService.java y test